--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -176,15 +176,25 @@ body {
   color: #b1b1b1;
 }
 
-.section-details-content .card-details .gallery .img-details {
-  width: 100%;
-  height: auto;
+.section-details-content .card-details .gallery {
+  width: 100% !important;
+}
+
+.section-details-content .card-details .gallery .xzoom-container {
+  display: block;
 }
 
 .section-details-content .card-details .gallery .xzoom-container .xzoom {
+  width: 100% !important;
   -webkit-box-shadow: none;
           box-shadow: none;
   margin-bottom: 10px;
+}
+
+.section-details-content .card-details .gallery .xzoom-container .xactive {
+  border: 2px solid black;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .section-details-content .card-right {
